--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.1.0",
     "@mui/styled-engine-sc": "^6.1.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.4",
     "react-slick": "^0.30.2",
